@@ -64,6 +64,7 @@ depth: 1
  * Convert userbar implementation to TypeScript (Albina Starykova)
  * Migrate slug field behaviour to a Stimulus controller and create new `SlugInput` widget (Loveth Omokaro)
  * Refactor `status` HTML usage to shared template tag (Aman Pandey, LB (Ben) Johnston)
+ * Add curlylint and update djhtml, semgrep versions in pre-commit config (Himanshu Garg)
 
 ## Upgrade considerations
 
