@@ -44,6 +44,7 @@ Changelog
  * Maintenance: Convert userbar implementation to TypeScript (Albina Starykova)
  * Maintenance: Migrate slug field behaviour to a Stimulus controller and create new `SlugInput` widget (Loveth Omokaro)
  * Maintenance: Refactor `status` HTML usage to shared template tag (Aman Pandey, LB (Ben) Johnston)
+ * Maintenance: Add curlylint and update djhtml, semgrep versions in pre-commit config (Himanshu Garg)
 
 
 4.2.1 (xx.xx.xxxx) - IN DEVELOPMENT
